--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -24,11 +30,19 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "eslint": "^9.7.0"
+    "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^3.1.9",
+    "eslint": "^9.7.0",
+    "jsdom": "^25.0.1",
+    "vitest": "^3.1.9"
   },
   "engines": {
     "node": ">=20.12.0"
