--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "^4.3.3",
     "@vitest/coverage-v8": "^3.1.9",
-    "eslint": "^9.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.0.0-canary.56",
     "jsdom": "^25.0.1",
     "vitest": "^3.1.9"
   },
